KAFKA-20623: Wire topology description plugin into GroupCoordinatorService